--- a/judo_profiles/profiles/templates/base.html
+++ b/judo_profiles/profiles/templates/base.html
@@ -10,19 +10,19 @@
     </head>
     <body>
         <header>
-            <a href="/">Home</a>
-            {% if request.user.profile %}
-                <a href="{{ request.user.profile.uuid }}">Eigenes Profil</a>
-            {% endif %}
             {% if request.user.is_authenticated %}
-                <a href="/auth/update">Passwort ändern</a>
-                <a href="/auth/logout">Abmelden</a>
+                <a href="{% url "profiles-home" %}">Home</a>
+                {% if request.user.profile %}
+                    <a href="{% url "profiles-profile" request.user.profile.uuid %}">Eigenes Profil</a>
+                {% endif %}
+                <a href="{% url "users-update" %}">Passwort ändern</a>
+                <a href="{% url "users-logout" %}">{{ request.user }} abmelden</a>
+                {% if request.user.is_superuser %}
+                    <a href="{% url "profiles-users" %}">Admin</a>
+                {% endif %}
             {% else %}
-                <a href="/auth/login">Anmelden</a>
-                <a href="/auth/register">Mit Token Registrieren</a>
-            {% endif %}
-            {% if request.user.is_superuser %}
-                <a href="/admin">Admin</a>
+                <a href="{% url "users-login" %}">Anmelden</a>
+                <a href="{% url "users-register" %}">Mit Token Registrieren</a>
             {% endif %}
             <button id="theme-selector" class="btn btn-secondary btn-sm" onclick="change_color_theme()">Auto</button>
         </header>
