most raw functionality done

--- a/judo_profiles/profiles/static/style/main.css
+++ b/judo_profiles/profiles/static/style/main.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     cursor: grab;
+    background-color: var(--bs-body-bg);
 }
 .option {
     display: inline-block;
