--- a/judo_profiles/users/templates/register.html
+++ b/judo_profiles/users/templates/register.html
@@ -2,6 +2,8 @@
 
 {% block title %}Mit Token registrieren{% endblock %}
 
+{% block register %}active" aria-current="page{% endblock %}
+
 {% block content %}
     <div class="container">
         {% if post %}
