--- a/judo_profiles/users/templates/update.html
+++ b/judo_profiles/users/templates/update.html
@@ -2,6 +2,8 @@
 
 {% block title %}Passwort ändern{% endblock %}
 
+{% block update %}active" aria-current="page{% endblock %}
+
 {% block content %}
     <div class="container">
         <form method="post">
