--- a/judo_profiles/users/templates/users/new.html
+++ b/judo_profiles/users/templates/users/new.html
@@ -2,6 +2,10 @@
 
 {% block title %}Passwort ändern{% endblock %}
 
+{% block admin_actions %}
+    <a class="nav-link active" href="">Neue/r Trainer*in</a>
+{% endblock %}
+
 {% block content %}
     <div class="container">
         <form method="post">
