--- a/judo_profiles/profiles/templates/profiles/new.html
+++ b/judo_profiles/profiles/templates/profiles/new.html
@@ -3,6 +3,11 @@
 
 {% block title %}Profil erstellen{% endblock %}
 
+{% block actions %}
+    <a class="nav-link active" href="">Neues Profil</a>
+    <input class="nav-link" type="submit" form="profile_form" value="Fertig">
+{% endblock %}
+
 {% block hidden_data %}
     <div id="hidden_t">
         {% for t in techniques %}
@@ -23,7 +28,7 @@
 {% endblock %}
 
 {% block form_container %}
-    <form method="post">
+    <form id="profile_form">
         {% csrf_token %}
 {% endblock %}
 
