--- a/judo_profiles/users/templates/login.html
+++ b/judo_profiles/users/templates/login.html
@@ -2,6 +2,8 @@
 
 {% block title %}Login{% endblock %}
 
+{% block login %}active" aria-current="page{% endblock %}
+
 {% block content %}
     <div class="container">
         {% if next %}
