--- a/judo_profiles/profiles/templates/abstract/base.html
+++ b/judo_profiles/profiles/templates/abstract/base.html
@@ -18,7 +18,7 @@
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url "profiles-profiles" %}">Judo Profile</a>
+                <a class="navbar-brand" href="{% url "profiles-home" %}">Judo Profile</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
